Criação de exercicios aperfeiçõada e listagem de exercicios pode ser deletada.